Bug 1620147 - Fix virtual surface coords being outside bounds. r=Bert,sotaro

This adds support for tracking and invalidating tiles based on a
movable virtual offset.

Differential Revision: https://phabricator.services.mozilla.com/D65687